# midi_piano_visualizer

./: .gitignore  Cargo.toml  README.md
examples/: egui.rs  input.rs  output.rs  piano.rs
src/: input.rs  output.rs
