[package]
name = "midi_piano_visualizer"
version = "0.1.0"
authors = ["saku <sakuposaku@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/sakupo/midi_piano_visualizer.git"
documentation = ""
description = "Send and receive MIDI data to and from bevy and other programs or controllers."
keywords = ["gamedev", "bevy", "midi", "encoding", "control"]
categories = ["game-development", "game-engines", "encoding" ]
exclude = [
    ".github/*",
    "assets/*"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "midi_piano_visualizer"

[dependencies]
midir = "0.10"
crossbeam-channel = "0.5.8"
bevy_eventlistener = "0.7"
bevy_picking = "0.16.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[dev-dependencies]
bevy_egui = { version = "0.35", features = ["immutable_ctx"]}
strum = { version = "0.26", features = ["derive"] }
bevy_mod_picking = "0.20"

[dependencies.bevy]
version = "0.16"
default-features = false
features = ["multi_threaded"]

[dev-dependencies.bevy]
version = "0.16"
features = ["bevy_core_pipeline","bevy_asset", "bevy_scene", "bevy_render", "bevy_winit", "bevy_gltf", "bevy_ui", "bevy_text", "zstd", "tonemapping_luts", "ktx2", "hdr"]
default-features = false

[target.'cfg(target_os = "linux")'.dev-dependencies.bevy]
version = "0.16"
features = ["x11", "wayland"]
default-features = false
